--- a/src/Disarmingly-Simple/Properties/launchSettings.json
+++ b/src/Disarmingly-Simple/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Disarmingly_Simple": {
+    "Digital_Ease": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
