--- a/src/Disarmingly-Simple/project.json
+++ b/src/Disarmingly-Simple/project.json
@@ -23,7 +23,9 @@
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
     "IBM.WatsonDeveloperCloud.SpeechToText.v1": "1.2.0",
-    "Newtonsoft.Json": "10.0.3"
+    "Newtonsoft.Json": "10.0.3",
+    "Microsoft.Bcl": "1.1.9",
+    "RestSharp.NetCore": "105.2.3"
   },
 
   "tools": {
