add user speech input functionality to project, link audio file to Watson call, show text transcript of speech on page.

--- a/src/Disarmingly-Simple/project.lock.json
+++ b/src/Disarmingly-Simple/project.lock.json
@@ -10988,7 +10988,8 @@
       "Microsoft.NETCore.App >= 1.0.1",
       "Microsoft.VisualStudio.Web.BrowserLink.Loader >= 14.0.0",
       "Newtonsoft.Json >= 10.0.3",
-      "RestSharp.NetCore >= 105.2.3"
+      "RestSharp.NetCore >= 105.2.3",
+      "System.Runtime >= 4.3.0"
     ],
     ".NETCoreApp,Version=v1.0": []
   },
