--- a/src/Disarmingly-Simple/project.json
+++ b/src/Disarmingly-Simple/project.json
@@ -25,7 +25,8 @@
     "IBM.WatsonDeveloperCloud.SpeechToText.v1": "1.2.0",
     "Newtonsoft.Json": "10.0.3",
     "Microsoft.Bcl": "1.1.9",
-    "RestSharp.NetCore": "105.2.3"
+    "RestSharp.NetCore": "105.2.3",
+    "System.Runtime": "4.3.0"
   },
 
   "tools": {
