--- a/src/Disarmingly-Simple/project.json
+++ b/src/Disarmingly-Simple/project.json
@@ -26,7 +26,8 @@
     "Newtonsoft.Json": "10.0.3",
     "Microsoft.Bcl": "1.1.9",
     "RestSharp.NetCore": "105.2.3",
-    "System.Runtime": "4.3.0"
+    "System.Runtime": "4.3.0",
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0"
   },
 
   "tools": {
