--- a/src/Disarmingly-Simple/project.lock.json
+++ b/src/Disarmingly-Simple/project.lock.json
@@ -10981,6 +10981,7 @@
       "Microsoft.Bcl >= 1.1.9",
       "Microsoft.Extensions.Configuration.EnvironmentVariables >= 1.0.0",
       "Microsoft.Extensions.Configuration.Json >= 1.0.0",
+      "Microsoft.Extensions.DependencyInjection.Abstractions >= 1.0.0",
       "Microsoft.Extensions.Logging >= 1.0.0",
       "Microsoft.Extensions.Logging.Console >= 1.0.0",
       "Microsoft.Extensions.Logging.Debug >= 1.0.0",
