add function to remove filler words from array, add javascript to pull most recently downloaded audio file and pass that one as data

--- a/src/Disarmingly-Simple/project.json
+++ b/src/Disarmingly-Simple/project.json
@@ -27,7 +27,12 @@
     "Microsoft.Bcl": "1.1.9",
     "RestSharp.NetCore": "105.2.3",
     "System.Runtime": "4.1.0",
-    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0"
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
+    "System.Collections.Immutable": "1.2.0",
+    "System.Linq.Parallel": "4.0.1",
+    "System.Linq": "4.3.0",
+    "System.Interactive.Async": "3.0.0",
+    "System.Linq.Queryable": "4.0.1"
   },
 
   "tools": {
